--- a/cors.html
+++ b/cors.html
@@ -5,6 +5,8 @@ req.onload = reqListener;
 req.open("get","https://institute.tencentmusic.com/auth/get_user_info",true);
 req.withCredentials = true;
 req.send();
+function reqListener() {
 alert(this.responseText);
+};
 </script>
 </html>
