--- a/xiaoe-tech.com.html
+++ b/xiaoe-tech.com.html
@@ -1,4 +1,5 @@
 <!--ifname Origin:null-->
+<meta name="referrer" content="always">
 <iframe sandbox="allow-scripts allow-top-navigation allow-forms" 
 src='data:text/html,<script>
 var req = new XMLHttpRequest();
