--- a/xiaoe-tech.com.html
+++ b/xiaoe-tech.com.html
@@ -1,7 +1,6 @@
 <!--ifname Origin:null-->
-<meta name="referrer" content="always">
 <iframe sandbox="allow-scripts allow-top-navigation allow-forms" 
-src='data:text/html,<script>
+src='data:text/html,<meta name="referrer" content="always"><script>
 var req = new XMLHttpRequest();
 req.onload = reqListener;
 req.open("get","https://institute.tencentmusic.com/auth/get_user_info",true);
